--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,7 +7,10 @@
   </head>
   <body id="page-top">
     
-    <h1>Welcome <%=@session[:user_id]%></h1>
+    <h1>Welcome <%=Helpers.current_user(@session).username%></h1>
+    <h3>Your Balance: <%=Helpers.current_user(@session).balance%></h3>
+
+    <p><a href="/logout">Log Out</a></p>
 
   </body>
 </html>
