--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,6 +12,7 @@
     <form action="/login" method="post">
       <input type="text" name="username">
       <input type="text" name="password">
+      <input type="submit">
     </form>
 
   </body>
